chore: change the icon on the buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <form action="">
                     <label class="sr-only" for="github-user">Github user</label>
                     <input type="text" name="github-user" id="github-user" placeholder="GitHub user">
-                    <button>+</button>
+                    <button>&plus;</button>
                 </form>
             </header>
             <main>
@@ -45,7 +45,7 @@
                             <td class="github-repositories">85</td>
                             <td class="github-followers">36</td>
                             <td>
-                                <button>x</button>
+                                <button>&times;</button>
                             </td>
                         </tr>
                     </tbody>
