style: tidy up the style for the table

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <main>
             <header>
                 <h1>Github favourites</h1>
-                <form action="">
+                <form class="search" action="">
                     <label class="sr-only" for="github-user">Github user</label>
                     <input type="text" name="github-user" id="github-user" placeholder="GitHub user">
-                    <button>&plus;</button>
+                    <button class="add-favourite">&plus;</button>
                 </form>
             </header>
             <main>
@@ -45,7 +45,55 @@
                             <td class="github-repositories">85</td>
                             <td class="github-followers">36</td>
                             <td>
-                                <button>&times;</button>
+                                <button class="remove">&times;</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="github-user">
+                                <img class="picture-profile" src="https://www.github.com/emidiovaleretto.png" alt="Github user profile picture">
+                                <div class="github-user-details">
+                                    <a href="https://www.github.com/emidiovaleretto" target="_blank">
+                                        <h2>Emidio Valeretto</h2>
+                                        <span>emidiovaleretto</span>    
+                                    </a>
+                                </div>
+                            </td>
+                            <td class="github-repositories">85</td>
+                            <td class="github-followers">36</td>
+                            <td>
+                                <button class="remove">&times;</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="github-user">
+                                <img class="picture-profile" src="https://www.github.com/emidiovaleretto.png" alt="Github user profile picture">
+                                <div class="github-user-details">
+                                    <a href="https://www.github.com/emidiovaleretto" target="_blank">
+                                        <h2>Emidio Valeretto</h2>
+                                        <span>emidiovaleretto</span>    
+                                    </a>
+                                </div>
+                            </td>
+                            <td class="github-repositories">85</td>
+                            <td class="github-followers">36</td>
+                            <td>
+                                <button class="remove">&times;</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="github-user">
+                                <img class="picture-profile" src="https://www.github.com/emidiovaleretto.png" alt="Github user profile picture">
+                                <div class="github-user-details">
+                                    <a href="https://www.github.com/emidiovaleretto" target="_blank">
+                                        <h2>Emidio Valeretto</h2>
+                                        <span>emidiovaleretto</span>    
+                                    </a>
+                                </div>
+                            </td>
+                            <td class="github-repositories">85</td>
+                            <td class="github-followers">36</td>
+                            <td>
+                                <button class="remove">&times;</button>
                             </td>
                         </tr>
                     </tbody>
