--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>My favourite Devs</title>
+    <script type="module" src="./assets/js/main.js" defer></script>
 </head>
 <body>
     <div id="app">
