--- a/index.html
+++ b/index.html
@@ -32,72 +32,7 @@
                             <th></th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td class="github-user">
-                                <img class="picture-profile" src="https://www.github.com/emidiovaleretto.png" alt="Github user profile picture">
-                                <div class="github-user-details">
-                                    <a href="https://www.github.com/emidiovaleretto" target="_blank">
-                                        <h2>Emidio Valeretto</h2>
-                                        <span>emidiovaleretto</span>    
-                                    </a>
-                                </div>
-                            </td>
-                            <td class="github-repositories">85</td>
-                            <td class="github-followers">36</td>
-                            <td>
-                                <button class="remove">&times;</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="github-user">
-                                <img class="picture-profile" src="https://www.github.com/emidiovaleretto.png" alt="Github user profile picture">
-                                <div class="github-user-details">
-                                    <a href="https://www.github.com/emidiovaleretto" target="_blank">
-                                        <h2>Emidio Valeretto</h2>
-                                        <span>emidiovaleretto</span>    
-                                    </a>
-                                </div>
-                            </td>
-                            <td class="github-repositories">85</td>
-                            <td class="github-followers">36</td>
-                            <td>
-                                <button class="remove">&times;</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="github-user">
-                                <img class="picture-profile" src="https://www.github.com/emidiovaleretto.png" alt="Github user profile picture">
-                                <div class="github-user-details">
-                                    <a href="https://www.github.com/emidiovaleretto" target="_blank">
-                                        <h2>Emidio Valeretto</h2>
-                                        <span>emidiovaleretto</span>    
-                                    </a>
-                                </div>
-                            </td>
-                            <td class="github-repositories">85</td>
-                            <td class="github-followers">36</td>
-                            <td>
-                                <button class="remove">&times;</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="github-user">
-                                <img class="picture-profile" src="https://www.github.com/emidiovaleretto.png" alt="Github user profile picture">
-                                <div class="github-user-details">
-                                    <a href="https://www.github.com/emidiovaleretto" target="_blank">
-                                        <h2>Emidio Valeretto</h2>
-                                        <span>emidiovaleretto</span>    
-                                    </a>
-                                </div>
-                            </td>
-                            <td class="github-repositories">85</td>
-                            <td class="github-followers">36</td>
-                            <td>
-                                <button class="remove">&times;</button>
-                            </td>
-                        </tr>
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </main>
         </main>
